
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-analysis-studio"
version = "0.1.0"
description = "Analyze A/B tests with guardrails, segment-level reads, and fast experiment review artifacts."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
